<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Profile">
    <TextView
        android:id="@+id/about"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:text="@string/about"/>

    <ImageView
        android:id="@+id/foto"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/foto" />

    <TextView
        android:id="@+id/profil"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:text="@string/nim" />
    <TextView
        android:id="@+id/nama"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:text="@string/nama" />
    <TextView
        android:id="@+id/kelas"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:text="@string/kelas" />
    <TextView
        android:id="@+id/Ref"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/black"
        android:text="Referensi  : \nVideo Playlist : tinyurl.com/utsgrego  \nMenu Action Bar : https://badoystudio.com/membuat-option-menu-di-android/ \nModul Mingguan Mobile \nDokumentasi Android Studio" />
</LinearLayout>