<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_baseline_library_music_24"/>
        <TextView
            android:id="@+id/txtMusicplayer"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:layout_gravity="center"
            android:textColor="#000000"
            android:text="@string/app_name"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_gravity="center"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:textColor="#ffff"
            android:background="@drawable/rectangle"
            android:text="@string/login"/>
        <Button
            android:id="@+id/btnProfil"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textColor="#ffff"
            android:background="@drawable/rectangle"
            android:text="@string/profile" />
</LinearLayout>