<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Login">


    <TextView
        android:id="@+id/txtLogin"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:text="@string/login"/>

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:textColor="#000"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:textColor="#000"
        android:hint="@string/pass"
        android:inputType="textPassword"/>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:textColor="#ffff"
        android:background="@drawable/rectangle"
        android:text="@string/login"/>

</LinearLayout>