<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mContainer"
    android:orientation="vertical"
    tools:context=".PlayerActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/layout_top_btn">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/back_btn"
            android:src="@drawable/ic_chevron_left"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nowplaying"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:id="@+id/card">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_baseline_library_music_2350"
            android:scaleType="centerCrop"
            android:id="@+id/cover_art" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/ImageViewGradient"/>
    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/song"
            android:layout_marginTop="30dp"
            android:id="@+id/song_name"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:textSize="22sp"
            android:textStyle="bold"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artis"
            android:id="@+id/song_artist"
            android:textColor="@color/black"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:textSize="18sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/relative_layout_for_bottom"
            android:gravity="center">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/id_prev"
                android:src="@drawable/ic_skip_previous"
                android:layout_marginEnd="16dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/play_pause"
                android:src="@drawable/ic_play"
                android:focusable="true"
                android:clickable="true" />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/id_next"
                android:src="@drawable/ic_skip_next"
                android:layout_marginStart="16dp" />
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="14dp"
        android:id="@+id/seek_bar_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:id="@+id/durationplayed"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:id="@+id/durationtotal"
            android:textColor="@color/black"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true" />
        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/seekbar"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

    </LinearLayout>


